# pyBeam

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  Makefile  README.md  README1  bashrc  install.sh  meson.build  runbeam.py  runbeamAD.py  typescript
pyBeam/: BEAM_config.cfg  BEAM_config.cfg~  Makefile  Makefile~  meson.build  pyBeam.i
pyBeam/include/: CDV.h  FiniteElement.h  FiniteElement_temp.h  Rotations.h  StructSyst.h  beam.h  element.h  element_bis.h  element_old.h  geometry.h  input.h  property.h  rigid_element.h  rotations.h  structure.h  types.h
pyBeam/include/datatypes/: ad_forward.hpp  ad_passive.hpp  ad_reverse.hpp
pyBeam/lib/: pyBeam.py  pyBeamAD.py  pyBeamConfig.py  pyBeamFM.py
pyBeam/pylib/: meson.build  pyBeamInterface.py  pyBeamLib.py  pyBeamLibAD.py  pyBeamSolver.py
pyBeam/pylib/pyBeamIO/: pyBeamConfig.py  pyBeamInput.py
pyBeam/python/: runbeam.py  runbeam.py~  runbeamAD.py
pyBeam/python/in_out/: BEAM_config.py  ReadInputs.py  ReadMesh.py  ReadMesh_temp.py~  __init__.py  __init__.py~
pyBeam/python/io/: ReadInputs.py  pyBeamConfig.py
pyBeam/python/pyBeamIO/: BEAM_config.py  ReadInputs.py  parseInput.py  pyBeamConfig.py
pyBeam/src/: .structure.cpp.swp  FiniteElement.cpp  Rotations.cpp  StructSyst.cpp  ad.cpp  beam.cpp  element.cpp  element_bis.cpp  geometry.cpp  input.cpp  main.cpp  property.cpp  rigid_element.cpp  rotations.cpp  structure.cpp  structure_good.cpp  structure_mollone.cpp
pyBeam/swig/: Input_parsing.py  __init__.py  pyBeam.i  pyBeamAD.i  pyBeamFM.i
pyBeam/temp_testcase/Long_Beam_no_stiff/: config_NL.cfg  property.prt  regression_esempio.py  regression_plt.py  test_findW.py  test_findW_sens.py
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Design/: History.pyBeam  History_restart.pyBeam  Regr_optimization_openMDAO_AD_lin.py  Regr_optimization_openMDAO_FD.py  SLSQP.out  config_non_lin.cfg  opt_results.sql  property.prt  pyBeamOpenMDAO.py  regression_plt.py  solution.pyBeam
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/: History.pyBeam  History_restart.pyBeam  KS_sens.txt  Regr_optimization_openMDAO_AD_lin.py  Regr_optimization_openMDAO_FD.py  STATUS.txt  config_lin.cfg  config_non_lin.cfg  constraint_KS.txt  property.prt  pyBeamOpenMDAO.py  regression_plt.py  solution.pyBeam  weight.txt  weight_sens.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/0000/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  Weight.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/0001/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/00010/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000100/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  Weight.txt  h.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000101/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000102/: A_fl.txt  A_stiff.txt  C_wb.txt  Weight.txt  h.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000103/: A_fl.txt  A_stiff.txt  C_wb.txt  Weight.txt  h.txt  t_sk.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000104/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000105/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000106/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  Weight.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000107/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000108/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/000109/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _opt/Optimization/opt_iter/00011/: A_fl.txt  A_stiff.txt  C_wb.txt  KS_constraint.txt  KS_sens.txt  Weight.txt  Weight_sens.txt  h.txt  t_sk.txt  t_sp.txt
pyBeam/temp_testcase/Long_Beam_no_stiff _optimization/: mesh.msh  property.prt  regression_esempio.py
pyBeam/temp_testcase/Long_Beam_no_stiff _optimization/Design/: 1Design.txt  3Design.txt
pyBeam/temp_testcase/MollaTorsione/: .~lock.dU.dat#
pyBeam/temp_testcase/MollaTorsione/Design/: History.pyBeam  History_restart.pyBeam  Regr_optimization_openMDAO_AD_lin.py  Regr_optimization_openMDAO_FD.py  SLSQP.out  mesh.msh  opt_results.sql  property.prt  regression_plt.py  solution.pyBeam
pyBeam/temp_testcase/OneraM6/Design/: History.pyBeam  History_restart.pyBeam  KS_Lsens.py  Run_primal.py  SLSQP.out  config_non_lin.cfg  mesh.msh  property.prt  solution.pyBeam
pyBeam/temp_testcase/OneraM6/Optimization/: History.pyBeam  KSst_NLsens.py  Regr_optimization_openMDAO_AD.py  Regr_optimization_openMDAO_AD_oneProp.py  Run_primal.py  constraint_KS.txt  constraint_KS_Buckling.txt  constraint_KS_buckling.txt  esempio.py  mesh.msh  opt_results.sql  property.prt  pyBeamOpenMDAO.py  weight.txt  weight_sens.txt
pyMLS/: meson.build
pyMLS/include/: interface.hpp
pyMLS/lib/: pyMLS.py
pyMLS/pylib/: meson.build  pyMLSInterface.py
pyMLS/pylib/pyMLSIO/: pyMLSConfig.py
pyMLS/src/: interface.cpp
pyMLS/swig/: pyMLS.i
tests/ONERAM6_new/: ONERAM6_str_est.py  (+12 more)
(+1649 files in other folders)
