install_data(['pyBeamLib.py',
              'pyBeamLibAD.py'], 
              install_dir: join_paths(get_option('libdir')))

install_data(['pyBeamIO/pyBeamConfig.py',
              'pyBeamIO/pyBeamInput.py'], 
              install_dir: join_paths(get_option('libdir'), 'pyBeamIO'))

install_data(['util/switch.py'], 
              install_dir: join_paths(get_option('libdir'), 'util'))
