#
# pyBeam, an open-source Beam Solver
#
# Copyright (C) 2019 by the authors
#
# File Developers: Ruben Sanchez (SciComp, TU Kaiserslautern)
#                  Tim Albring (SciComp, TU Kaiserslautern)
#
# This file is part of pyBeam.
#
# pyBeam is free software: you can redistribute it and/or
# modify it under the terms of the GNU Affero General Public License
# as published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# pyBeam is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty
# of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Affero General Public License for more details.
# You should have received a copy of the GNU Affero
# General Public License along with pyBeam.
# If not, see <http://www.gnu.org/licenses/>.
#


install_data(['pyBeamLib.py',
              'pyBeamLibAD.py',
              'pyBeamInterface.py'],
              install_dir: join_paths('bin'))

install_data(['pyBeamIO/pyBeamConfig.py',
              'pyBeamIO/pyBeamInput.py'],
              install_dir: join_paths('bin', 'pyBeamIO'))

install_data(['util/switch.py'], 
              install_dir: join_paths('bin', 'util'))
